css/app.less
body {
  padding-top: 50px;
  background-image: url('/images/background.jpg');
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
  background-size: cover;
}

#navbar h4 {
  color: #fff;
}

